Semi-updated README

--- a/README
+++ b/README
@@ -7,4 +7,4 @@
 |_|  \_\ |_____| /_/   |_| |_____/ /_/        |_| |_____| 
 =========================================================
 
-Nothing here yet...
+This project is for my 8th grade history class.
