Added another sentence to the read me.

--- a/README
+++ b/README
@@ -7,4 +7,4 @@
 |_|  \_\ |_____| /_/   |_| |_____/ /_/        |_| |_____| 
 =========================================================
 
-This project is for my 8th grade history class.
+This project is for my 8th grade history class. I have yet to finish the read me.
